infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-produtos
  labels:
    app.kubernetes.io/part-of: portal-produtos-digitais
